--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+server.port=${PORT:8080}
